gen/v25.1/rpk/rpk-cloud-cluster-select.adoc
= rpk cloud cluster select
:description: rpk cloud cluster select

Update your rpk profile to talk to the requested cluster.

This command is essentially an alias for the following command:

    rpk profile create --from-cloud=${NAME}

If you want to name this profile rather than creating or updating values in
the default cloud-dedicated profile, you can use the --profile flag.

== Usage

[,bash]
----
rpk cloud cluster select [NAME] [flags]
----

== Aliases

[,bash]
----
select, use
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for select.

|--profile |string |Name of a profile to create or update (avoids updating "rpk-cloud").

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|-v, --verbose |- |Enable verbose logging.
|===